--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.2.0",
-    "@angular/cdk": "15.2.9",
+    "@angular/cdk": "^15.2.9",
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
     "@angular/core": "^15.2.0",
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "@fortawesome/fontawesome-free": "^6.0.0",
+    "angular-bootstrap-md": "^15.0.0",
     "angular-datatables": "^15.0.0",
     "bootstrap": "^5.3.3",
     "chart.js": "^3.1.1",
