--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "datatables.net": "^2.0.2",
     "datatables.net-dt": "^2.0.2",
     "jquery": "^3.7.1",
+    "json-server": "^1.0.0-alpha.23",
     "ngx-chips": "^3.0.0",
-    "primeng": "^17.11.0",
+    "primeicons": "^6.0.1",
+    "primeng": "^17.12.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.10.6",
     "tslib": "^2.3.0",
