--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "datatables.net-dt": "^2.0.2",
     "jquery": "^3.7.1",
     "json-server": "^1.0.0-alpha.23",
+    "lodash": "^4.17.21",
     "ngx-chips": "^3.0.0",
     "primeicons": "^6.0.1",
     "primeng": "^17.12.0",
@@ -47,6 +48,7 @@
     "@types/datatables.net": "^1.10.28",
     "@types/jasmine": "~4.3.0",
     "@types/jquery": "^3.5.29",
+    "@types/lodash": "^4.17.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
