--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
     "@angular/core": "^15.2.0",
+    "@angular/fire": "^17.0.1",
     "@angular/forms": "^15.2.0",
     "@angular/material": "15.2.9",
     "@angular/platform-browser": "^15.2.0",
@@ -29,6 +30,7 @@
     "chart.js": "^3.1.1",
     "datatables.net": "^2.0.2",
     "datatables.net-dt": "^2.0.2",
+    "firebase": "^10.11.0",
     "jquery": "^3.7.1",
     "json-server": "^1.0.0-alpha.23",
     "lodash": "^4.17.21",
